Tue Jun 30 09:32:17 GMT 2015  Olly Betts <olly@survex.com>

	* src/: Whitespace cleanup.

Mon Jun 29 12:27:49 GMT 2015  Olly Betts <olly@survex.com>

	* doc/cad3d.sgml,doc/manual.sgml: Remove references to SpeleoGen,
	  which hasn't been updated for many years, and which can't read
	  current the recent versions of the .3d format.

Mon Jun 29 03:14:52 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sun Jun 28 13:35:47 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sun Jun 28 11:43:11 GMT 2015  Olly Betts <olly@survex.com>

	* src/message.c: Ignore any "@<something>" modifier in the language
	  code.

Sun Jun 28 11:40:06 GMT 2015  Olly Betts <olly@survex.com>

	* src/message.c: Remove compatibility handling for specifying a country
	  variant of a language in SURVEXLANG using "-" with a lower case
	  country code (e.g. "en-us") - we changed to the standard "en_US" way
	  back in 2001.

Sun Jun 28 09:28:56 GMT 2015  Olly Betts <olly@survex.com>

	* src/kml.cc: Use the "paddle" placemarkers rather than push pins.

Sun Jun 28 07:25:12 GMT 2015  Olly Betts <olly@survex.com>

	* src/kml.cc,src/kml.h,src/printing.cc: Implement exporting of survey
	  legs in KML format.

Sun Jun 28 07:20:09 GMT 2015  Olly Betts <olly@survex.com>

	* src/kml.h: Whitespace tweak.

Sun Jun 28 07:18:42 GMT 2015  Olly Betts <olly@survex.com>

	* src/kml.cc: Put coloured "pin" icons into KML files, like we do for
	  GPX files.

Sat Jun 27 12:46:03 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Use wxSystem() rather than conditionally calling
	  system() or _wsystem() depending on the platform.

Sat Jun 27 12:45:22 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Use wxAtof() to get double from wxString.

Sat Jun 27 12:44:04 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc,src/mainfrm.cc: Use wxFopen() rather than
	  conditionally calling fopen() or _wfopen() depending on the platform.
