@@ -1,3 +1,8 @@
+Tue Jun 30 12:22:55 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/kml.cc: Put all the <LineString> elements into a <MultiGeometry>,
+	  rather than having each in a separate <Placemark>.
+
 Tue Jun 30 09:32:17 GMT 2015  Olly Betts <olly@survex.com>
 
 	* src/: Whitespace cleanup.
